# version-store-backend

./: .dockerignore  .gitignore  Dockerfile  LICENCE  Makefile  README.md  pyproject.toml  schema.graphql
django/: db.sqlite3  docker-entrypoint.sh
django/main/: admin.py  models.py  schema.py  settings.py  types.py  urls.py
django/main/management/commands/: export_schema.py  seedstates.py
django/main/migrations/: 0001_squashed_0005_alter_product_image.py  0006_basket_alter_product_name_basketitem_basket_products.py  0007_alter_product_image.py  0008_remove_basketitem_quantity.py  0009_product_category.py  0009_review.py  0010_category_remove_product_category.py  0011_product_category.py
